# soundbox-server

./: .gitignore  CMakeLists.txt  README.md
assets/: keywords.txt
include/apm/aec/: webrtc_processor.hpp
include/apm/kws/: kws_placeholder.hpp
include/audio_processing_module/: application.hpp  modules.hpp  wav_writer.hpp  webrtc_processor.hpp
include/common/: unix_socket.hpp  wav_writer.hpp
include/config/: application.hpp
include/frontend/: audio_stream_frontend.hpp
include/llm/: file_recorder.hpp
scripts/: build_webrtc_apm_1_3.sh
src/: application.cpp  audio_frame.cpp  main.cpp  modules.cpp  unix_socket.cpp  wav_writer.cpp  webrtc_processor.cpp
src/apm/aec/: aec_stream_processor.cpp  webrtc_processor.cpp
src/apm/kws/: gate.cpp  keywords.cpp  kws_placeholder.cpp  kws_socket_server.cpp  kws_zipformer.cpp  local_listener.cpp  trigger.cpp
src/common/: audio_frame.cpp  rate_limited_logger.cpp  unix_socket.cpp  wav_writer.cpp
src/config/: application.cpp
src/frontend/: audio_stream_frontend.cpp  soundbox_frontend.cpp
src/frontend/soundbox/: audio_pipe.cpp  audio_router.cpp  client.cpp  command_guard.cpp  event_dispatcher.cpp  mode_controller.cpp  packet.cpp  packet_parser.cpp  response_hub.cpp  soundbox.cpp
src/include/apm/aec/: aec_stream_processor.hpp  webrtc_processor.hpp
src/include/apm/kws/: gate.hpp  keywords.hpp  kws_engine.hpp  kws_socket_server.hpp  kws_zipformer.hpp  local_listener.hpp  trigger.hpp
src/include/common/: audio_frame.hpp  log.hpp  rate_limited_logger.hpp  unix_socket.hpp  wav_writer.hpp
src/include/config/: application.hpp  config.hpp
src/include/frontend/: soundbox_frontend.hpp
src/include/frontend/soundbox/: audio_pipe.hpp  audio_router.hpp  client.hpp  client_internal.hpp  command_guard.hpp  event_dispatcher.hpp  mode_controller.hpp  packet.hpp  packet_parser.hpp  response_hub.hpp  soundbox.hpp
src/include/llm/: file_recorder.hpp  llm_client.hpp
src/llm/: file_recorder.cpp  llm_client.cpp
tests/: audio_processing_module_tests.cpp
tests/aec/: file_audio_stream_frontend.cpp  file_audio_stream_frontend.hpp  file_recorder.cpp  file_recorder.hpp
tests/fixtures/: aec_2ch_16k.s16  aec_2ch_16k_gushi.s16  aec_2ch_16k_music.s16  expected_aec_processed.md5  expected_aec_processed_gushi.md5  expected_aec_processed_music.md5  kws_1ch_16k_nowake.s16  kws_1ch_16k_wake.s16
